--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -149,8 +149,11 @@ legend {
 .footer {
     display: flex;
     background-color: #444242;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    width: 100%;
+    padding: 10px 10px 0px 10px;
+    height: 8rem;
 }
 
 .footer div {
